change base image for dieudonne/docker-spark